# citron-emulator

./: CMakeLists.txt  build-citron-linux.sh  build-clangtron-windows.sh  dependencies.cmake  vcpkg.json
AppImageBuilder/: build-v2.sh
CMakeModules/: CopyCitronQt6Deps.cmake  CopyMinGWDeps.cmake  FixLinuxBundleRpaths.cmake  dependencies.cmake  icu_build.cmake  openssl_build.cmake  qt_download.cmake  xcb_build.cmake
src/android/: build.gradle.kts
src/android/app/: build.gradle.kts
src/android/app/src/main/java/org/citron/citron_emu/: NativeLibrary.kt
src/android/app/src/main/java/org/citron/citron_emu/activities/: EmulationActivity.kt
src/android/app/src/main/java/org/citron/citron_emu/applets/keyboard/: SoftwareKeyboard.kt
src/android/app/src/main/java/org/citron/citron_emu/overlay/: InputOverlay.kt
src/android/app/src/main/java/org/citron/citron_emu/utils/: DirectoryInitialization.kt
src/android/app/src/main/jni/: native.cpp  native.h
src/audio_core/: CMakeLists.txt
src/audio_core/sink/: sink_details.cpp
src/citron/: CMakeLists.txt  bootmanager.cpp  game_list.cpp  main.cpp  theme.h  uisettings.cpp  uisettings.h
src/citron/applets/: qt_software_keyboard.cpp  qt_software_keyboard.h
src/citron/configuration/: configure_dialog.cpp  configure_neo_themes.cpp  configure_neo_themes.h  configure_per_game_addons.cpp  configure_ui.cpp  qt_config.cpp
src/citron/debugger/: wait_tree.cpp
src/citron/ui/: game_carousel_view.cpp  game_grid_view.cpp
src/citron/util/: blackjack_widget.cpp  cup_shuffle_widget.cpp  dice_widget.cpp
src/common/: settings_enums.h
src/common/android/applets/: software_keyboard.cpp  software_keyboard.h
src/core/: CMakeLists.txt
src/core/crypto/: aes_ni.h  aes_util.cpp  aes_util.h  key_manager.cpp  key_manager.h  partition_data_manager.cpp  sha_util.h
src/core/file_sys/: patch_manager.cpp  registered_cache.cpp  registered_cache.h  submission_package.cpp  xts_archive.cpp
src/core/frontend/applets/: software_keyboard.cpp  software_keyboard.h
src/core/hle/kernel/: k_capabilities.cpp
src/core/hle/kernel/svc/: svc_debug.cpp  svc_exception.cpp
src/core/hle/service/aoc/: addon_content_manager.cpp
src/core/hle/service/bcat/: bcat_util.h  delivery_cache_directory_service.cpp
src/core/hle/service/filesystem/: filesystem.cpp
src/core/hle/service/nfc/common/: amiibo_crypto.cpp  amiibo_crypto.h
src/core/hle/service/ro/: ro.cpp
src/core/loader/: nca.cpp
src/dedicated_room/: CMakeLists.txt  citron_room.cpp
src/shader_recompiler/: profile.h
src/shader_recompiler/backend/spirv/: spirv_emit_context.cpp
src/shader_recompiler/ir_opt/: texture_pass.cpp
src/video_core/: macro.cpp
src/video_core/host_shaders/: CMakeLists.txt
src/video_core/renderer_vulkan/: pipeline_helper.h  vk_compute_pipeline.cpp  vk_compute_pipeline.h  vk_graphics_pipeline.cpp  vk_graphics_pipeline.h  vk_pipeline_cache.cpp  vk_update_descriptor.h
src/web_service/: CMakeLists.txt  verify_user_jwt.cpp
